# sdlc-agents

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  repositories.yaml.example
examples/: basic_usage.py
src/sdlc_agents/: __init__.py  cli.py  config.py  logging_config.py  repository_config.py
src/sdlc_agents/agents/: __init__.py  base.py  build_monitor_agent.py  code_repo_agent.py  orchestrator.py  release_manager_agent.py  requirements_agent.py
src/sdlc_agents/integrations/: __init__.py  ado_client.py
src/sdlc_agents/llm/: __init__.py  base.py  factory.py  ollama_provider.py  openai_provider.py
src/sdlc_agents/memory/: __init__.py  clickhouse_memory.py
tests/: __init__.py  conftest.py  test_ado_client.py  test_agents.py  test_integration.py  test_llm_providers.py  test_memory.py  test_repository_config.py
